day3/02_ingress/02_app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: devdeployapp1
 labels:
  name: devdeployapp1
spec:
 replicas: 1
 selector:
  matchLabels:
   name: devapp1
 template:
  metadata:
   name: devapp1
   labels:
    name: devapp1
  spec:
   containers:
   - name: container
     image: stackupiss/bgg-backend:v1
     imagePullPolicy: IfNotPresent
     args:
     - --prefix
     - /v1
     ports:
     - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
 name: bggapp-svc1
 labels:
  name: bggapp-svc1
spec:
 type: ClusterIP
 selector:
  name: devapp1
 ports:
 - port: 8080
   targetPort: 3000
