day3/02_ingress/4_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: devingress
 labels:
  name: devingress
spec:
 ingressClassName: nginx
 rules:
 - host: bgg-167.99.29.163.nip.io
   http:
    paths:
    - path: /v1
      pathType: Prefix
      backend:
       service:
        name: bggapp-svc1
        port:
         number: 8080
    - path: /v2
      pathType: Prefix
      backend:
       service:
        name: bggapp-svc2
        port:
         number: 8081
